--- a/vim/perl-support/templates/comments.template
+++ b/vim/perl-support/templates/comments.template
@@ -33,76 +33,20 @@
 §%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 == comment.file-description-pl == start ==
 #!/usr/bin/perl 
-#===============================================================================
-#
-#         FILE:  |FILENAME|
-#
-#        USAGE:  ./|FILENAME|  
-#
-#  DESCRIPTION:  <CURSOR>
-#
-#      OPTIONS:  ---
-# REQUIREMENTS:  ---
-#         BUGS:  ---
-#        NOTES:  ---
-#       AUTHOR:  |AUTHOR| (|AUTHORREF|), |EMAIL|
-#      COMPANY:  |COMPANY|
-#      VERSION:  1.0
-#      CREATED:  |DATE| |TIME|
-#     REVISION:  ---
-#===============================================================================
+use Imvu;
 
-use strict;
-use warnings;
-
-
+<CURSOR>
 §%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 == comment.file-description-pm == start ==
-#
-#===============================================================================
-#
-#         FILE:  |FILENAME|
-#
-#  DESCRIPTION:  <CURSOR>
-#
-#        FILES:  ---
-#         BUGS:  ---
-#        NOTES:  ---
-#       AUTHOR:  |AUTHOR| (|AUTHORREF|), |EMAIL|
-#      COMPANY:  |COMPANY|
-#      VERSION:  1.0
-#      CREATED:  |DATE| |TIME|
-#     REVISION:  ---
-#===============================================================================
-
-use strict;
-use warnings;
-
+package <CURSOR>;
+use Imvu;
 
 §%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 == comment.file-description-t == start ==
-#
-#===============================================================================
-#
-#         FILE:  |FILENAME|
-#
-#  DESCRIPTION:  <CURSOR>
-#
-#        FILES:  ---
-#         BUGS:  ---
-#        NOTES:  ---
-#       AUTHOR:  |AUTHOR| (|AUTHORREF|), |EMAIL|
-#      COMPANY:  |COMPANY|
-#      VERSION:  1.0
-#      CREATED:  |DATE| |TIME|
-#     REVISION:  ---
-#===============================================================================
-
-use strict;
-use warnings;
-
-use Test::More tests => 1;                      # last test to print
-
+#!/usr/bin/perl
+use Imvu;
+use Test::More;
+plan tests => 1;
 
 §%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 == comment.file-description-pod == start ==
