--- a/vim/perl-support/templates/idioms.template
+++ b/vim/perl-support/templates/idioms.template
@@ -41,9 +41,9 @@ $<CURSOR> =~ tr/<+searchlist+>/<+replacementlist+>/
 §%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 == idioms.subroutine ==
 sub |?FUNCTION_NAME| {
-    my ($par1<CURSOR>) = @_;
+    my ($<CURSOR>) = @_;
 <SPLIT>    return;
-}	# ----------  end of subroutine |FUNCTION_NAME|  ----------
+}
 §%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 == idioms.print == insert ==
 print "<CURSOR>\n";
