--- a/vim/perl-support/templates/statements.template
+++ b/vim/perl-support/templates/statements.template
@@ -1,10 +1,10 @@
 §%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 == statements.do-while ==
 do {
-<SPLIT>} while ( <CURSOR> );				# -----  end do-while  -----
+<SPLIT>} while  (<CURSOR>);
 §%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 == statements.for ==
-for ( my $<CURSOR>; ;  ) {
+for my $<CURSOR> ( ) {
 <SPLIT>}
 §%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 == statements.foreach ==
@@ -12,19 +12,20 @@ foreach my $<CURSOR> (  ) {
 <SPLIT>}
 §%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 == statements.if ==
-if ( <CURSOR> ) {
+if (<CURSOR>) {
 <SPLIT>}
 §%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 == statements.else ==
-else {<CURSOR>
-<SPLIT>}
+else {
+<CURSOR>
+}
 §%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 == statements.elsif ==
-elsif ( <CURSOR> ) {
+elsif (<CURSOR>) {
 <SPLIT>}
 §%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 == statements.if-else ==
-if ( <CURSOR> ) {
+if (<CURSOR>) {
 <SPLIT><-IF PART->
 }
 else {
@@ -32,22 +33,22 @@ else {
 }
 §%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 == statements.unless ==
-unless ( <CURSOR> ) {
+unless (<CURSOR>) {
 <SPLIT>}
 §%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 == statements.unless-else ==
-unless ( <CURSOR> ) {
+unless (<CURSOR>) {
 <SPLIT>}
 else {
 	<+ELSE PART+>
 }
 §%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 == statements.until ==
-until ( <CURSOR> ) {
+until (<CURSOR>) {
 <SPLIT>}
 §%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 == statements.while ==
-while ( <CURSOR> ) {
+while (<CURSOR>) {
 <SPLIT>}
 §%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 == statements.block ==
