--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 [submodule "vim/bundle/gitv"]
 	path = vim/bundle/gitv
 	url = https://github.com/gregsexton/gitv.git
+[submodule "autojump"]
+	path = autojump
+	url = https://github.com/joelthelion/autojump.git
