--- a/.gitmodules
+++ b/.gitmodules
@@ -61,3 +61,6 @@
 [submodule "vim/bundle/textobj-word-column.vim"]
 	path = vim/bundle/textobj-word-column.vim
 	url = https://github.com/coderifous/textobj-word-column.vim
+[submodule "vim/bundle/vim-yankstack"]
+	path = vim/bundle/vim-yankstack
+	url = https://github.com/maxbrunsfeld/vim-yankstack
