Add tmux status stuff

--- a/tmux.conf
+++ b/tmux.conf
@@ -26,3 +26,9 @@ setw -g automatic-rename on
 set -g update-environment -r
 set -g default-terminal "screen-256color"
 
+set-option -g status-utf8
+set-option -g status-keys vi
+set-option -g status-bg '#003070'
+set-option -g status-fg 'white'
+set-option -g status-left '#[bg=#004488]#[fg=white]#I: #[fg=bright]#T  #[default]  '
+set-option -g status-right '  #[bg=#003377]#[fg=white]'
