allow escaping of C-a and minimum status-left-length

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,7 @@
 unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
+bind-key a send-prefix
 bind-key C-a last-window
 setw -g mode-keys vi
 unbind-key j
@@ -31,4 +32,5 @@ set-option -g status-keys vi
 set-option -g status-bg '#003070'
 set-option -g status-fg 'white'
 set-option -g status-left '#[bg=#004488]#[fg=white]#I: #[fg=bright]#T  #[default]  '
+set-option -g status-left-length 30
 set-option -g status-right '  #[bg=#003377]#[fg=white]'
