--- a/tmux.conf
+++ b/tmux.conf
@@ -1,9 +1,11 @@
+# Key Bindings
 unbind C-b
-set -g prefix C-a
 bind C-a send-prefix
 bind-key a send-prefix
 bind-key C-a last-window
-setw -g mode-keys vi
+bind-key s split-window
+
+# Pane Movement
 unbind-key j
 bind-key j select-pane -D
 unbind-key k
@@ -12,25 +14,29 @@ unbind-key h
 bind-key h select-pane -L
 unbind-key l
 bind-key l select-pane -R
-bind-key s split-window
-bind-key C-a last-window
-# Just click it
+
+# General Options
+setw -g aggressive-resize on
+setw -g automatic-rename on
+setw -g mode-keys vi
+set -g update-environment -r
+set -g default-terminal "screen-256color"
+set -g prefix C-a
+
+# Mouse Options
 set-option -g mouse-select-pane on
 set-option -g mouse-select-window on
 set-option -g mouse-resize-pane on
-setw -g aggressive-resize on
-
-# Scroll your way into copy mode (scrollback buffer)
-# and select text for copying with the mouse
 setw -g mode-mouse on
-setw -g automatic-rename on
-set -g update-environment -r
-set -g default-terminal "screen-256color"
 
+# Status Options
 set-option -g status-utf8
 set-option -g status-keys vi
 set-option -g status-bg '#003070'
 set-option -g status-fg 'white'
 set-option -g status-left '#[bg=#004488]#[fg=white]#I: #[fg=bright]#T  #[default]  '
-set-option -g status-left-length 30
-set-option -g status-right '  #[bg=#003377]#[fg=white]'
+set-option -g status-left-length 60
+
+# Pane Options
+set-option -g pane-border-fg '#0044AA'
+set-option -g pane-active-border-fg '#0044AA'
