--- a/.gitmodules
+++ b/.gitmodules
@@ -64,3 +64,6 @@
 [submodule "vim/bundle/vim-yankstack"]
 	path = vim/bundle/vim-yankstack
 	url = https://github.com/maxbrunsfeld/vim-yankstack
+[submodule "vim/bundle/jellybeans"]
+	path = vim/bundle/jellybeans
+	url = https://github.com/nanotech/jellybeans.vim.git
